messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging
      version: blue
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: messaging
        version: blue
    spec:
      containers:
        - name: messaging-blue
          image: messaging_app:blue
          ports:
            - containerPort: 8000
