messaging_app/messaging_app/green_deployment.yaml
# green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-green
  labels:
    app: django-app
    version: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-app
      version: green
  template:
    metadata:
      labels:
        app: django-app
        version: green
    spec:
      containers:
        - name: django-app
          image: your-django-app:v2  # Replace with your updated image
          ports:
            - containerPort: 8000
