messaging_app/messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messaging-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: messaging.local  # Optional, replace with your domain or use localhost via /etc/hosts
      http:
        paths:
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: messaging-app-service
                port:
                  number: 80
